--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-top-bar></app-top-bar>
 
+<div *ngFor="let clock of clocks">
+  <h2>{{clock.tag}}</h2>
+</div>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
