--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-top-bar></app-top-bar>
 
-<div *ngFor="let clock of clocks">
-  <h2>{{clock.tag}}</h2>
-</div>
+<app-clocks-flow-view></app-clocks-flow-view>
 
 <div class="container">
   <router-outlet></router-outlet>
