--- a/src/app/clocks-flow-view/clocks-flow-view.component.scss
+++ b/src/app/clocks-flow-view/clocks-flow-view.component.scss
@@ -2,3 +2,13 @@
 {
     font-weight: bold;
 }
+
+.clock-view
+{
+    padding: 1rem;
+
+    &.selected
+    {
+        background-color: lightyellow;
+    }
+}
