--- a/src/app/clocks-flow-view/clocks-flow-view.component.html
+++ b/src/app/clocks-flow-view/clocks-flow-view.component.html
@@ -1,7 +1,3 @@
 <div *ngFor="let clock of clocks">
-    <div class="clock-view" (click)="onClicked(clock)"
-            [class.selected]="clock.selected">
-        <h2>{{clock.id}}. {{clock.tag}}</h2>
-        <textarea [(ngModel)]="clock.tag" placeholder="clock tag here" class="clock-tag-textarea"></textarea>
-    </div>
+    <app-clock-view [clock]="clock"></app-clock-view>
 </div>
