--- a/src/app/clock-view/clock-view.component.html
+++ b/src/app/clock-view/clock-view.component.html
@@ -1,1 +1,4 @@
-<p>clock-view works!</p>
+<div class="clock-view" (click)="onClicked(clock)" [class.selected]="clock.selected">
+    <h2>{{clock.id}}. {{clock.tag}}</h2>
+    <textarea [(ngModel)]="clock.tag" placeholder="clock tag here" class="clock-tag-textarea"></textarea>
+</div>
