Added small nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <app-top-bar></app-top-bar>
 
+<nav>
+  <a routerLink="/">Flow view</a>&nbsp;|&nbsp;
+  <a routerLink="/data-grid">Data grid</a>
+</nav>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
 
 <app-status-bar></app-status-bar>
-
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
