--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-top-bar></app-top-bar>
 
 <nav>
-  <a routerLink="/">Flow view</a>&nbsp;|&nbsp;
+  <a routerLink="/flow-view">Flow view</a>&nbsp;|&nbsp;
   <a routerLink="/data-grid">Data grid</a>
 </nav>
 
